Flowmini/flowmini_v23_token_tree_bridge/examples/pass/comment_markers_inside_string.flow
import "../../std/abi/libc.flow"

program comment_markers_inside_string

main {
    len : c_size_t(0)

    // These markers are string payload, not comments.
    strlen("/* not a comment */ // also not a comment") -> len
    print len
}
