Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_abi_wrong_arg.flow
import "../../std/abi/libc.flow"

program bad_abi_wrong_arg

main {
    n : c_int(42)
    out : c_size_t(0)

    strlen(n) -> out
    print out
}
